# ts-asof

./: .gitignore  README.md  pyproject.toml
examples/: wili_example.ipynb
src/asof/: __init__.py  builder.py  dataset.py  utils.py  wili_example.py
src/asof/sources/: __init__.py  base.py  epidata.py
versioning/: config.py  construct.py  debug.py  main.py  to_do.md  utils.py
versioning/data/wili/: base.parquet  delta_metadata.json  finalized.parquet  max_issue_lookup.json
versioning/replication/: config.py  data_loader.py  main.py  versioning.py
versioning/replication/evaluation/: init.py  metrics.py
versioning/replication/models/: arima_model.py  init.py  timesfm_model.py
versioning/replication/output/: model_comparison_results.csv  model_comparison_summary_stats.csv
versioning/replication/visualization/: init.py  pdf.py  plots.py
